Updated the develop branch

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-# Site settings
-title: "Shinichiro Takizawa's homepage"
-
-# Build settings
-markdown: kramdown
-
+title: Shinichiro Takizawa's homepage
+description: >- # this means to ignore newlines until "theme:"
+  This is the homepage of Shinichiro Takizawa, a researcher of computer science.
 theme: jekyll-theme-cayman
+markdown: kramdown
+#show_downloads: true
+#google_analytics:
